--- a/zashboard/zashboard-settings.json
+++ b/zashboard/zashboard-settings.json
@@ -69,7 +69,7 @@
   "config/speedtest-timeout": "5000",
   "config/two-columns": "true",
   "config/hide-unavailable-proxies": "false",
-  "config/icon-reflect-list": "[{\"name\":\"自搭\",\"icon\":\"https://raw.githubusercontent.com/laozi4vip/icons/main/Icon/Color/AI_bot.png\"}]",
+  "config/icon-reflect-list": "[{\"name\":\"自搭\",\"icon\":\"https://raw.githubusercontent.com/laozi4vip/icons/main/Icon/Color/AI_bot.png,\"uuid\":\"0f15404d-eba7-4d5a-b382-2764c2c5jd09\"}]",
   "config/speedtest-url": "https://www.gstatic.com/generate_204",
   "config/dark-theme": "dark",
   "config/quick-filter-enabled": "false",
