--- a/zashboard/zashboard-settings.json
+++ b/zashboard/zashboard-settings.json
@@ -8,14 +8,14 @@
   "config/truncate-proxy-name": "true",
   "config/ipv6-test": "false",
   "config/icon-size": "14",
-  "config/show-statistics-when-sidebar-collapsed": "true",
   "config/log-level": "info",
+  "config/show-statistics-when-sidebar-collapsed": "true",
   "config/source-ip-label-map": "{}",
   "config/use-connecticon-card": "true",
-  "config/swipe-in-tabs": "false",
   "config/min-proxy-card-width": "145",
-  "config/proxy-preview-type": "auto",
+  "config/swipe-in-tabs": "false",
   "config/import-settings-url": "./zashboard-settings.json",
+  "config/proxy-preview-type": "auto",
   "config/use-smart-group-sort": "true",
   "config/table-width-mode": "auto",
   "config/proxy-group-icon-margin": "6",
@@ -31,12 +31,12 @@
   "config/custom-themes": "[]",
   "config/display-global-by-mode": "false",
   "config/dashboard-transparent": "0",
-  "config/auto-upgrade": "true",
+  "config/auto-upgrade": "false",
   "config/connection-sort-direction": "asc",
   "config/display-all-features": "false",
-  "config/split-overview-page": "false",
   "config/auto-connection-check": "true",
-  "config/collapse-group-map": "{\"自建本地\":false,\"无限流量\":false,\"Social Media\":false}",
+  "config/collapse-group-map": "{\"自建本地\":false,\"无限流量\":false,\"Social Media\":false,\"AI\":false}",
+  "config/split-overview-page": "false",
   "config/proxy-group-icon-size": "18",
   "config/default-theme": "halloween",
   "config/ipv6-map": "{}",
@@ -57,15 +57,15 @@
   "config/proxies-count-mode": "aliveTotal",
   "config/proxy-card-size": "large",
   "config/log-search-history": "[]",
-  "config/auto-upgrade-core": "true",
+  "config/auto-upgrade-core": "false",
   "config/display-proxies-relationship": "true",
   "config/manage-hidden-group-mode": "false",
   "config/low-latency": "400",
-  "config/check-upgrade-core": "true",
+  "config/check-upgrade-core": "false",
   "config/is-sidebar-collapsed": "true",
   "config/display-now-node-in-rule": "true",
-  "config/custom-global-node-name": "GLOBAL",
   "config/connection-sort-type": "host",
+  "config/custom-global-node-name": "GLOBAL",
   "config/speedtest-timeout": "5000",
   "config/two-columns": "true",
   "config/hide-unavailable-proxies": "false",
